# libftp

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  com_log.c  com_log.h  com_string.c  com_string.h
platform/: CMakeLists.txt  pf_mem.h  pf_socket.h
platform/posix/: posix_mem.c  posix_socket.c
tests/: CMakeLists.txt  test_socket.c
